kubernetes/overlays/prod/patches/tdi-deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdi
spec:
  template:
    spec:
      imagePullSecrets:
        - name: tdi-scaleway-secret
      containers:
        - name: tdi
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "512Mi"
