kubernetes/overlays/prod/patches/tdi-ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdi
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - tdi.inokufu.com
      secretName: prod-tdi-tls
  rules:
    - host: tdi.inokufu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tdi
                port:
                  name: http
